tests/ui/pattern/usefulness/top-level-alternation.stderr
error: unreachable pattern
  --> $DIR/top-level-alternation.rs:4:23
   |
LL |     while let 0..=2 | 1 = 0 {}
   |               -----   ^ unreachable pattern
   |               |
   |               matches all the values already
   |
note: the lint level is defined here
  --> $DIR/top-level-alternation.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:5:20
   |
LL |     if let 0..=2 | 1 = 0 {}
   |            -----   ^ unreachable pattern
   |            |
   |            matches all the values already

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:9:15
   |
LL |         0
   |         - matches all the values already
LL |             | 0 => {}
   |               ^ unreachable pattern

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:14:15
   |
LL |         Some(0)
   |         ------- matches all the values already
LL |             | Some(0) => {}
   |               ^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:19:9
   |
LL |         (0, _) | (_, 0) => {}
   |         --------------- matches all the values already
LL |         (0, 0) => {}
   |         ^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:39:9
   |
LL |         None | Some(_) => {}
   |         -------------- matches all the values already
LL |         _ => {}
   |         ^ unreachable pattern

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:43:9
   |
LL |         None | Some(_) => {}
   |         -------------- matches all the values already
LL |         Some(_) => {}
   |         ^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:44:9
   |
LL |         None | Some(_) => {}
   |         -------------- matches all the values already
LL |         Some(_) => {}
LL |         None => {}
   |         ^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:49:9
   |
LL |         None | Some(_) => {}
   |         ^^^^^^^^^^^^^^ unreachable pattern
   |
note: these patterns collectively make the last one unreachable
  --> $DIR/top-level-alternation.rs:49:9
   |
LL |         Some(_) => {}
   |         ------- matches some of the same values
LL |         None => {}
   |         ---- matches some of the same values
LL |         None | Some(_) => {}
   |         ^^^^^^^^^^^^^^ collectively making this unreachable

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:53:9
   |
LL |         1 | 2 => {},
   |         ----- matches all the values already
LL |         1..=2 => {},
   |         ^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:56:14
   |
LL |     let (0 | 0) = 0 else { return };
   |          -   ^ unreachable pattern
   |          |
   |          matches all the values already

error: aborting due to 11 previous errors

